# OA-Reimbursement-AIAgent

./: .env.example  .gitignore  LICENSE  README.md  prototype.html  pyproject.toml  pyrightconfig.json  requirements.txt  run_tests.sh  run_web.py
.github/workflows/: ci.yml
docs/: constitution.md  design.md  prototype.html  prototype_v2.html  requirement.md  test_report.html  test_report.md  testcases.md  workflow-animation.html
docs/adr/: ADR-001-choose-deepseek.md  ADR-002-function-call-structured-output.md  ADR-003-three-state-validation.md  ADR-005-database-strategy.md  ADR-006-file-storage-strategy.md  ADR-007-adopt-langgraph.md  ADR-008-agent-registry.md  README.md
scripts/: _smoke_disabled.py  delete_pending_reimbursements.py  delete_reimbursements_by_ids.py
skill/: __init__.py  agent.py  config.py  database.py  skill_manifest.yaml  workflow.py
skill/agents/: __init__.py  base_agent.py  itinerary_agent.py
skill/orchestrator/: __init__.py  graph.py  registry.py  state.py
skill/rules/: anomaly_rules.yaml  approval_authority.yaml  category_limits.yaml
skill/schemas/: __init__.py  anomaly_schema.py  classify_schema.py  (+2 more)
tests/: conftest.py  perf_e2e_latency.py  test_admin.py  test_agent.py  test_anomaly_check.py  test_api_approve_finance.py  test_classify_limit.py  test_e2e.py  test_itinerary_agent.py  test_itinerary_verify.py  test_mask_sensitive.py  test_model_config_selfcheck.py  test_ocr_extract.py  test_performance.py  test_system_config_e2e.py  test_verify_invoice.py  test_vision_model_wiring.py  test_workflow.py  uat.sh
web/: app.py
(+36 files in other folders)
